[gd_scene load_steps=6 format=3 uid="uid://bfwu1luekak3o"]

[ext_resource type="Texture2D" uid="uid://bgjffwo4sw63e" path="res://Assets/Textures/photos/broken_94.png" id="1_jlbf4"]
[ext_resource type="Script" path="res://Main/Components/Photos/photo_button.gd" id="1_tpnk4"]
[ext_resource type="Material" uid="uid://cp7ii2vgpoi8v" path="res://Assets/Resource/Shaders/canvas_group_black_white_material.tres" id="2_y4sth"]
[ext_resource type="Shader" path="res://Assets/Resource/Shaders/pixel.gdshader" id="3_xkn3w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4igl7"]
shader = ExtResource("3_xkn3w")
shader_parameter/uniform_texture = true
shader_parameter/use_height = false
shader_parameter/pixel_size_uniform = 94
shader_parameter/pixel_size = Vector2(240, 240)

[node name="PhotoButton" type="Control"]
use_parent_material = true
custom_minimum_size = Vector2(94, 94)
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_tpnk4")

[node name="TextureRect" type="TextureRect" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_jlbf4")

[node name="CanvasGroup" type="CanvasGroup" parent="."]
material = ExtResource("2_y4sth")

[node name="PhotoButton" type="TextureButton" parent="CanvasGroup"]
material = SubResource("ShaderMaterial_4igl7")
custom_minimum_size = Vector2(94, 94)
mouse_filter = 1
ignore_texture_size = true
stretch_mode = 6

[connection signal="mouse_entered" from="CanvasGroup/PhotoButton" to="." method="_on_photo_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasGroup/PhotoButton" to="." method="_on_photo_button_mouse_exited"]
[connection signal="pressed" from="CanvasGroup/PhotoButton" to="." method="_on_photo_button_pressed"]
